fixed legend alignment

--- a/src/components/calendar_view/index.scss
+++ b/src/components/calendar_view/index.scss
@@ -66,6 +66,7 @@
             padding: 3px;
             width: 24px;
             margin-right: 3%;
+            text-align: center;
           }
           .hair.color,
           .hair.cut,
